// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders checked correctly 1`] = `
<div
  className=
      ms-Checkbox
      is-checked
      is-enabled
      {
        display: flex;
        position: relative;
      }
      &:hover .ms-Checkbox-checkbox {
        background: #005a9e;
        border-color: #005a9e;
      }
      &:focus .ms-Checkbox-checkbox {
        background: #005a9e;
        border-color: #005a9e;
      }
      & .ms-Checkbox-checkbox {
        background: #0078d4;
        border-color: #0078d4;
      }
      @media screen and (-ms-high-contrast: active){&:hover .ms-Checkbox-checkbox {
        background: Window;
        border-color: Highlight;
      }
      @media screen and (-ms-high-contrast: active){&:focus .ms-Checkbox-checkbox {
        background: Highlight;
      }
      @media screen and (-ms-high-contrast: active){&:focus:hover .ms-Checkbox-checkbox {
        background: Highlight;
      }
      @media screen and (-ms-high-contrast: active){&:focus:hover .ms-Checkbox-checkmark {
        color: Window;
      }
      @media screen and (-ms-high-contrast: active){&:hover .ms-Checkbox-checkmark {
        color: Highlight;
      }
      &:hover .ms-Checkbox-text {
        color: #201f1e;
      }
      &:focus .ms-Checkbox-text {
        color: #201f1e;
      }
>
  <input
    aria-checked="true"
    aria-label="Standard checkbox"
    checked={true}
    className=

        {
          background: none;
          opacity: 0;
          position: absolute;
        }
        .ms-Fabric--isFocusVisible &:focus + label::before {
          outline-offset: 2px;
          outline: 1px solid #605e5c;
        }
        @media screen and (-ms-high-contrast: active){.ms-Fabric--isFocusVisible &:focus + label::before {
          outline: 1px solid ActiveBorder;
        }
    id="checkbox-1"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="checkbox"
  />
  <label
    className=
        ms-Checkbox-label
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          align-items: flex-start;
          cursor: pointer;
          display: flex;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          position: relative;
          text-align: left;
          user-select: none;
        }
        &::before {
          bottom: 0px;
          content: "";
          left: 0px;
          pointer-events: none;
          position: absolute;
          right: 0px;
          top: 0px;
        }
    htmlFor="checkbox-1"
  >
    <div
      className=
          ms-Checkbox-checkbox
          {
            align-items: center;
            background: #0078d4;
            border-color: #0078d4;
            border-radius: 2px;
            border: 1px solid #323130;
            box-sizing: border-box;
            display: flex;
            flex-shrink: 0;
            height: 20px;
            justify-content: center;
            margin-right: 4px;
            overflow: hidden;
            position: relative;
            transition-duration: 200ms;
            transition-property: background, border, border-color;
            transition-timing-function: cubic-bezier(.4, 0, .23, 1);
            width: 20px;
          }
          @media screen and (-ms-high-contrast: active){& {
            background: Highlight;
            border-color: Highlight;
          }
    >
      <i
        aria-hidden={true}
        className=
            ms-Checkbox-checkmark
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #ffffff;
              display: inline-block;
              font-family: "FabricMDL2Icons";
              font-style: normal;
              font-weight: normal;
              opacity: 1;
              speak: none;
            }
            @media screen and (-ms-high-contrast: active){& {
              -ms-high-contrast-adjust: none;
              color: Window;
            }
        data-icon-name="CheckMark"
      >
        
      </i>
    </div>
    <span
      aria-hidden="true"
      className=
          ms-Checkbox-text
          {
            color: #323130;
            font-size: 14px;
            line-height: 20px;
            margin-left: 4px;
          }
    >
      Standard checkbox
    </span>
  </label>
</div>
`;

exports[`Checkbox renders indeterminate correctly 1`] = `
<div
  className=
      ms-Checkbox
      is-enabled
      {
        display: flex;
        position: relative;
      }
      &:hover .ms-Checkbox-checkbox {
        border-color: #005a9e;
      }
      @media screen and (-ms-high-contrast: active){&:hover .ms-Checkbox-checkbox {
        border-color: Highlight;
      }
      &:focus .ms-Checkbox-checkbox {
        border-color: #005a9e;
      }
      &:hover .ms-Checkbox-checkmark {
        color: #605e5c;
        opacity: 0;
      }
      @media screen and (-ms-high-contrast: active){&:hover .ms-Checkbox-checkmark {
        color: Highlight;
      }
      &:hover .ms-Checkbox-checkbox:after {
        border-color: #005a9e;
      }
      &:hover .ms-Checkbox-text {
        color: #201f1e;
      }
      &:focus .ms-Checkbox-text {
        color: #201f1e;
      }
>
  <input
    aria-checked="mixed"
    aria-label="Standard checkbox"
    checked={false}
    className=

        {
          background: none;
          opacity: 0;
          position: absolute;
        }
        .ms-Fabric--isFocusVisible &:focus + label::before {
          outline-offset: 2px;
          outline: 1px solid #605e5c;
        }
        @media screen and (-ms-high-contrast: active){.ms-Fabric--isFocusVisible &:focus + label::before {
          outline: 1px solid ActiveBorder;
        }
    id="checkbox-2"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="checkbox"
  />
  <label
    className=
        ms-Checkbox-label
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          align-items: flex-start;
          cursor: pointer;
          display: flex;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          position: relative;
          text-align: left;
          user-select: none;
        }
        &::before {
          bottom: 0px;
          content: "";
          left: 0px;
          pointer-events: none;
          position: absolute;
          right: 0px;
          top: 0px;
        }
    htmlFor="checkbox-2"
  >
    <div
      className=
          ms-Checkbox-checkbox
          {
            align-items: center;
            border-color: #0078d4;
            border-radius: 2px;
            border: 1px solid #323130;
            box-sizing: border-box;
            display: flex;
            flex-shrink: 0;
            height: 20px;
            justify-content: center;
            margin-right: 4px;
            overflow: hidden;
            position: relative;
            transition-duration: 200ms;
            transition-property: background, border, border-color;
            transition-timing-function: cubic-bezier(.4, 0, .23, 1);
            width: 20px;
          }
          &:after {
            border-color: #0078d4;
            border-radius: 2px;
            border-style: solid;
            border-width: 5px;
            box-sizing: border-box;
            content: "";
            height: 10px;
            left: 4px;
            position: absolute;
            top: 4px;
            transition-duration: 200ms;
            transition-property: border-width, border, border-color;
            transition-timing-function: cubic-bezier(.4, 0, .23, 1);
            width: 10px;
          }
    >
      <i
        aria-hidden={true}
        className=
            ms-Checkbox-checkmark
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #ffffff;
              display: inline-block;
              font-family: "FabricMDL2Icons";
              font-style: normal;
              font-weight: normal;
              opacity: 0;
              speak: none;
            }
            @media screen and (-ms-high-contrast: active){& {
              -ms-high-contrast-adjust: none;
              color: Window;
            }
        data-icon-name="CheckMark"
      >
        
      </i>
    </div>
    <span
      aria-hidden="true"
      className=
          ms-Checkbox-text
          {
            color: #323130;
            font-size: 14px;
            line-height: 20px;
            margin-left: 4px;
          }
    >
      Standard checkbox
    </span>
  </label>
</div>
`;

exports[`Checkbox renders unchecked correctly 1`] = `
<div
  className=
      ms-Checkbox
      is-enabled
      {
        display: flex;
        position: relative;
      }
      &:hover .ms-Checkbox-checkbox {
        border-color: #323130;
      }
      @media screen and (-ms-high-contrast: active){&:hover .ms-Checkbox-checkbox {
        border-color: Highlight;
      }
      &:focus .ms-Checkbox-checkbox {
        border-color: #323130;
      }
      &:hover .ms-Checkbox-checkmark {
        color: #605e5c;
        opacity: 1;
      }
      @media screen and (-ms-high-contrast: active){&:hover .ms-Checkbox-checkmark {
        color: Highlight;
      }
      &:hover .ms-Checkbox-text {
        color: #201f1e;
      }
      &:focus .ms-Checkbox-text {
        color: #201f1e;
      }
>
  <input
    aria-checked="false"
    aria-label="Standard checkbox"
    checked={false}
    className=

        {
          background: none;
          opacity: 0;
          position: absolute;
        }
        .ms-Fabric--isFocusVisible &:focus + label::before {
          outline-offset: 2px;
          outline: 1px solid #605e5c;
        }
        @media screen and (-ms-high-contrast: active){.ms-Fabric--isFocusVisible &:focus + label::before {
          outline: 1px solid ActiveBorder;
        }
    id="checkbox-0"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="checkbox"
  />
  <label
    className=
        ms-Checkbox-label
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          align-items: flex-start;
          cursor: pointer;
          display: flex;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          position: relative;
          text-align: left;
          user-select: none;
        }
        &::before {
          bottom: 0px;
          content: "";
          left: 0px;
          pointer-events: none;
          position: absolute;
          right: 0px;
          top: 0px;
        }
    htmlFor="checkbox-0"
  >
    <div
      className=
          ms-Checkbox-checkbox
          {
            align-items: center;
            border-radius: 2px;
            border: 1px solid #323130;
            box-sizing: border-box;
            display: flex;
            flex-shrink: 0;
            height: 20px;
            justify-content: center;
            margin-right: 4px;
            overflow: hidden;
            position: relative;
            transition-duration: 200ms;
            transition-property: background, border, border-color;
            transition-timing-function: cubic-bezier(.4, 0, .23, 1);
            width: 20px;
          }
    >
      <i
        aria-hidden={true}
        className=
            ms-Checkbox-checkmark
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #ffffff;
              display: inline-block;
              font-family: "FabricMDL2Icons";
              font-style: normal;
              font-weight: normal;
              opacity: 0;
              speak: none;
            }
            @media screen and (-ms-high-contrast: active){& {
              -ms-high-contrast-adjust: none;
              color: Window;
            }
        data-icon-name="CheckMark"
      >
        
      </i>
    </div>
    <span
      aria-hidden="true"
      className=
          ms-Checkbox-text
          {
            color: #323130;
            font-size: 14px;
            line-height: 20px;
            margin-left: 4px;
          }
    >
      Standard checkbox
    </span>
  </label>
</div>
`;
